# newsletter

./: .dockerignore  .env.example  .random_sub.swp  Cargo.toml  Dockerfile  README.md  clippy  code-coverage  config.yaml  dbuild  init_db  random_sub  sqlx-data.json  watch.sh
configuration/: base.yaml
migrations/: 20220320191329_create_subscription_table.sql  20220402193603_make_status_not_null_in_subscriptions.sql  20220402193759_create_subscription_tokens_table.sql
scripts/: init_db  random_sub  watch
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
