[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
